proyecto con informacion de json actualizada y con errores corregidos

--- a/proyectosemtres/src/main/res/values/strings.xml
+++ b/proyectosemtres/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="infogral">Central Park es uno de los lugares turísticos en Nueva York en invierno más bonitos, época en la que está cubierto de nieve, también en otoño, estación en que sus praderas y árboles se tiñen de colores ocres y en primavera y verano, cuando el parque luce en todo su esplendor.
     Con 340 hectáreas, unos 4 kilómetros de largo y 800 metros de ancho, este es uno de los mayores parques del planeta, el principal pulmón verde de la ciudad y junto con el Hyde Park de Londres, el parque urbano más famoso del mundo.
 </string>
-    <string name="actividades">Actividades para hacer en Central Park</string>
+    <string name="actividades">Actividades para hacer:</string>
     <string name="actividades_central_park">•	Tour en bicicleta, alquilar una barca y surcar The Lake, patinar sobre hielo en Navidad,
     ir al cine o al teatro, visitar el met y el museo de historia natural, ir a las piscinas públicas en verano
 </string>
